--- a/index.html
+++ b/index.html
@@ -5,24 +5,101 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <title>Shrek Resume</title>
     <href>
 </head>
-<h1>Muhammad Patel</h1>
-<h2>SYSTEMS ANALYST</h2>
-<section>
-    <h3>Contact Details</h3>
-    <ul>500 Cool Guy ln Austin,TX 78787</ul>
-    <ul>Email: Coolguy@gmail.com</ul>
-    <ul>Website: www.coolguy.com</ul>
-    <ul>Linkedin: @coolguy</ul>
-    <h3>Work References</h3>
-    <ul>Steve Jobs</ul>
-    <p>He has a secret phone number and email</p>
-    <ul>Jeff Bezos</ul>
-    <p>He has a secret phone number and email</p>
-</section>
+
+<div class="lc">
+<img src="./images/Shrek.jpg" alt="shrek" class="img">
+
+
 <body>
+
+<section style="color: blue;" class="title">
+
+    <h1>Shrek</h1>
+
+    <h3>Savior of The Kingdom</h3>
+
+</section>
+</div>
+
+
+<section style="color:white" class="info">
+    <article>
+        <h3>Contact Details</h3>
+            <ul>500 The Swamp Austin,TX 78787</ul>
+            <ul>Email: Shrek@gmail.com</ul>
+            <ul>Website: www.Shrek.com</ul>
+            <ul>Linkedin: @Shrek</ul>
+    </article>
+
+    <article>
+        <h3>Work References</h3>
+            <ul>Donkey</ul>
+            <ul>Phone number: (512) 459-2222</ul>
+            <ul>Email: Donkey@ada.com</ul>
+            <ul>Gingerbread Man</ul>
+            <p>phone number and email</p>
+    </article>
+</section>
+
+<main>
+
+<section style="color: blue" class="personal skills">
+    <article>
+        <h2>Personal Summary</h2>
+            <p>A gigantic, green-skinned, physically intimidating ogre with a Scottish accent.</p>
+    </article>
+
+    <article>
+        <h2>Core Skills</h2>
+            <ul>Fighting</ul>
+            <ul>Makes a mean weed rat stew</ul>
+            <ul>Eating</ul>
+            <ul>Rescueing Princesses</ul>
+            <ul>Finding True Love</ul>
+    </article>
+</section>
+
+<section>
+ <h2>Work History</h2>
+    <article>
+        <h3>Rescueing</h3>
+            <p>April 22, 2001 to May 18, 2002</p>
+            <ul>Defeated the Dragon</ul>
+            <ul>Rescued Fiona in a Timely Manner</ul>
+            <ul>Ended Lord Farquaad</ul>
+    </article>
+
+    <article>
+        <h3>Meeting the Parents</h3>
+            <p>May 15, 2004 to May 19, 2004</p>
+            <ul>Defeated The Fairy Godmother</ul>
+            <ul>Recruited and trained members for a team</ul>
+            <ul>Became human for a short period of time</ul>
+    </article>
+</section>
+
+<section>
+    
+    <h2>Academic History</h2>
+
+        <article>
+            <h3>Far Far Away University</h3>
+                <p>August 7, 1995 to May 25, 1999</p>
+                <li>Studied Fighting, cooking, and all other fairy tale things.</li>
+        </article>
+
+        <article>
+            <h3>Art Institute of Far Far Away</h3>
+                <li>Academic achievements</li>
+                <li>Academic achievements</li>
+                <li>Academic achievements</li>
+        </article>
+
+</section>
+</main>
     
 </body>
 </html>
