--- a/index.html
+++ b/index.html
@@ -6,26 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>Shrek Resume</title>
-    <href>
 </head>
 
-<div class="lc">
-<img src="./images/Shrek.jpg" alt="shrek" class="img">
-
-
 <body>
+<main>
+    <div class="image-container">
+    <img src="./images/Shrek.jpg" alt="shrek" class="img">
+    </div>
 
-<section style="color: blue;" class="title">
+<div style="color: blue;" class="title-container">
 
-    <h1>Shrek</h1>
+    <h1>Shrek</h1 class>
 
     <h3>Savior of The Kingdom</h3>
 
-</section>
 </div>
 
 
-<section style="color:white" class="info">
+<div style="color:white" class="info-container">
     <article>
         <h3>Contact Details</h3>
             <ul>500 The Swamp Austin,TX 78787</ul>
@@ -42,63 +40,65 @@
             <ul>Gingerbread Man</ul>
             <p>phone number and email</p>
     </article>
-</section>
+</div>
 
-<main>
-
-<section style="color: blue" class="personal skills">
+<div style="color: blue" class="ps-container">
     <article>
         <h2>Personal Summary</h2>
-            <p>A gigantic, green-skinned, physically intimidating ogre with a Scottish accent.</p>
+            <p class="summary">A gigantic, green-skinned, physically intimidating ogre with a Scottish accent, preferring to live alone and undisturbed..</p>
     </article>
 
     <article>
-        <h2>Core Skills</h2>
-            <ul>Fighting</ul>
-            <ul>Makes a mean weed rat stew</ul>
-            <ul>Eating</ul>
-            <ul>Rescueing Princesses</ul>
-            <ul>Finding True Love</ul>
+        <h2 class="cs-container">Core Skills</h2>
+            <ul class="cs">Fighting</ul>
+            <ul class="cs">Makes a mean weed rat stew</ul>
+            <ul class="cs">Eating</ul>
+            <ul class="cs">Rescueing Princesses</ul>
+            <ul class="cs">Finding True Love</ul>
     </article>
-</section>
+</div>
 
-<section>
+<div style="color: blue;" class="wh-container">
  <h2>Work History</h2>
-    <article>
+    <div class="flex">
+    <article class="rescue">
         <h3>Rescueing</h3>
-            <p>April 22, 2001 to May 18, 2002</p>
-            <ul>Defeated the Dragon</ul>
-            <ul>Rescued Fiona in a Timely Manner</ul>
-            <ul>Ended Lord Farquaad</ul>
+            <p class="cs">April 22, 2001 to May 18, 2002</p>
+            <ul class="cs">Defeated the Dragon</ul>
+            <ul class="cs">Rescued Fiona</ul>
+            <ul class="cs">Ended Lord Farquaad</ul>
     </article>
 
     <article>
         <h3>Meeting the Parents</h3>
-            <p>May 15, 2004 to May 19, 2004</p>
-            <ul>Defeated The Fairy Godmother</ul>
-            <ul>Recruited and trained members for a team</ul>
-            <ul>Became human for a short period of time</ul>
+            <p class="cs">May 15, 2004 to May 19, 2004</p>
+            <ul class="cs">Defeated The Fairy Godmother</ul>
+            <ul class="cs">Recruited and trained members for a team</ul>
+            <ul class="cs">Became human for a short period of time</ul>
     </article>
-</section>
+    </div>
+</div>
 
-<section>
+<div style="color: blue;" class="ah-container">
     
     <h2>Academic History</h2>
-
-        <article>
+<div class="flex">
+        <article class="history">
             <h3>Far Far Away University</h3>
-                <p>August 7, 1995 to May 25, 1999</p>
-                <li>Studied Fighting, cooking, and all other fairy tale things.</li>
+                <p class="cs">August 7, 1995 to May 25, 1999</p>
+                <ul class="cs">Studied Fighting</ul>
+                <ul class="cs">cooking</ul> 
+                <ul class="cs">all other fairy tale things.</ul>
         </article>
 
         <article>
             <h3>Art Institute of Far Far Away</h3>
-                <li>Academic achievements</li>
-                <li>Academic achievements</li>
-                <li>Academic achievements</li>
+                <ul class="cs">Academic achievements</ul>
+                <ul class="cs">Academic achievements</ul>
+                <ul class="cs">Academic achievements</ul>
         </article>
-
-</section>
+</div>
+    </div>
 </main>
     
 </body>
